--- a/src/components/About Section/about.scss
+++ b/src/components/About Section/about.scss
@@ -3,7 +3,7 @@
 .about__container{
     display: grid;
     grid-template-columns: 5% 1fr 5% 1fr 5%;
-    grid-template-rows: 50px 200px 100px 1fr 100px 50px;
+    grid-template-rows: 50px 350px 100px 1fr 100px 50px;
     height:100%;
     width: 100%;
     background: $primary-dark;
@@ -24,7 +24,7 @@
 
     .about__bottom__triangle{
         grid-column: 1/-1;
-        grid-row: 3/-1;
+        grid-row: 2/-1;
         width:100%;
         height: 101%;
         background: $primary;
@@ -48,7 +48,7 @@
 
     .about__header{
         grid-column: 1/-1;
-        grid-row: 2/3;
+        grid-row: 2;
         text-align: right;
         z-index: 3;
         font-size: 20vw;
