--- a/src/components/Projects Section/project-container.scss
+++ b/src/components/Projects Section/project-container.scss
@@ -3,7 +3,7 @@
 .project-container__container{
     
     display: grid;
-    grid-template-rows: 8vw 1fr 1fr 1fr 1fr 100px;
+    grid-template-rows: 20vw 1fr 1fr 1fr 1fr 100px;
     grid-template-columns: 20% 1fr 20%;
     grid-gap: 80px 0;
     height: 100%;
