--- a/src/components/Title Section/title.scss
+++ b/src/components/Title Section/title.scss
@@ -159,10 +159,11 @@
         position: fixed;
         top: 0;
         left: 0;
-        z-index:5;
+        z-index:10;
         width: 100%;
         height: 100%;
         background: rgba(83, 83, 83, 0.863);
+        
         .title__contact__container{
             width: 50vh;
             height: 50vh;
@@ -170,15 +171,21 @@
             background: $primary;
             text-align: center;
             .title__contact__header{
+                position: relative;
+                z-index: 22;
                 display: flex;
-                justify-content: space-around;
+                
             h1{
+                flex-basis: 3;
                 flex-grow: 3;
-                padding: 20px;
+                
+                padding: 20px 70px 20px 20px;
                 text-decoration: underline $primary-light;
+                text-align: right;
                 color: $secondary-dark;
             }
             h3{
+                flex-basis: 1;
                 padding: 20px;
                 font-size: 30px;
                 cursor: pointer;
@@ -197,44 +204,29 @@
                 margin: 20px;
                 li{
                     padding: 10px;
-                    color: $secondary-dark;   
-                    a{
-                        text-decoration: none;
-                        color:$primary-dark;
-                        transition: all 0.3s ease-in-out;
-                    }
-                    a:hover{
-                        color: $primary-light;
-                        
-                        transform: scale(1.1)
-    
-                    }
-                }
-                
+                    width: 80%;
+                    height: 40px;
+                    margin: 20px auto;
+                    text-align: center;
+                    background: $secondary-dark;
+                    cursor: pointer;
+                    transition: all 0.3s ease-in-out;   
                     a{
                         text-decoration: none;
                         color:$primary-light;
-                        text-align: center;
-                        margin: 40px auto;
-                        width: 100%;
-                        li{
-                            width: 80%;
-                            height: 40px;
-                            margin: 40px auto;
-                            background:$primary-dark;
-                            transition: all 0.3s ease-in-out;
-                            
-                        }
-                        li:hover{
-                            color: $primary-light;
-                            background: $secondary-dark;
-                            transform: scale(1.1)
-
-                        }
+                        padding: 10px 105px;  
+                    }
+                    
+                }
+                
+                li:hover{
+                        
+                        background: $primary-dark;
+                        transform: scale(1.1)
 
                     }
                     
-                
+  
             }
         }
     }
